Colour contrast fix on the parent page

--- a/src/campaign/sass/_colours.scss
+++ b/src/campaign/sass/_colours.scss
@@ -11,6 +11,7 @@ $apprentice-pale:   #f5faff;
 
 $parent:            #4C2C92;
 $parent-mid:        #4C2C92;
+$parent-light:      #8B6AD2;
 
 $grey-1:        #212121;
 $grey-2:        #212121;
